<resources>
    <string name="app_name">SmartGroceryTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_information">Information</string>
    <string name="action_budget">Budget</string>

    <string name="menu_home">Grocery Tracker</string>
    <string name="menu_gallery">Global Search</string>
    <string name="expenses_fragment">Expenses</string>
    <string name="menu_slideshow">Stores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smallheading">Manage your grocery expenses</string>

    <string name="textsize_title">Select Text Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium (Default)</string>
    <string name="large">Large</string>
    <string name="extra_large">ExtraLarge</string>

    <string name="no_item_found">No Item found</string>

    <string name="detailed_description">Detailed Description</string>

    <string name="apply">Apply</string>
    <!-- Static Information -->
    <string name="bigheading">Snap Cart</string>
    <string name="authors">Author: Madhvesh Chokshi, Sujani Chandrashekar, Krisha Sakalsawala, Trisha Reddy, Payal Darji</string>
    <string name="app_version">App Version: 1.0.0</string>
    <string name="app_description">This app helps you manage your grocery shopping effortlessly by creating organized lists, tracking inventory at home, setting reminders for overspending, and estimating budgets to control spending. This app simplifies your grocery experience, saving you time and money.</string>

    <!-- Buttons -->
    <string name="logout">Logout</string>

    <!-- Profile Section -->
    <string name="user_profile">User Profile</string>
    <string name="tap_to_edit">Tap to view and edit</string>

    <!-- Language Section -->
    <string name="language_label">Language:</string>
    <string name="language_english">English</string>
    <string name="language_hindi">Hindi</string>
    <string name="change_language">Change Language</string>
    <string name="save_changes">Save Changes</string>

    <string name="spent">Spent</string>
    <string name="remaining">Remaining</string>
    <string name="no_active_budget">No active budget</string>
    <string name="create_account_text">Create Account</string>
    <string name="second_text_signup">Join us to start managing your expenses better</string>
    <string name="welcomeback_login">Welcome back</string>
    <string name="second_login">We missed you! Login to get started</string>
    <string name="hello_folks">Hello, Folks!</string>
    <string name="user">User</string>
    <string name="username">Username</string>
    <string name="your_email">Your Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_end_date">Select End Date</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="zero">0</string>
    <string name="one">0</string>
    <string name="two">0</string>
    <string name="three">0</string>
    <string name="four">0</string>
    <string name="five">0</string>
    <string name="six">0</string>
    <string name="seven">0</string>
    <string name="eight">0</string>
    <string name="nine">0</string>
    <string name="clear">C</string>
    <string name="night_mode">Night mode</string>
    <string name="privacy">Privacy</string>
    <string name="text_size">Text Size</string>
    <string name="languages">Languages</string>
    <string name="please_search">Please Search</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_budget_cad">Enter your budget</string>
    <string name="set_your_budget">Set Budgetं</string>
    <string name="Reset_password">Reset Password</string>
    <string name="captured_image">Captured Image</string>
    <string name="close">Close</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="we_missed_you_login_to_get_started">We missed you! Login to get started</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="need_help">Need Help?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_instead">Register instead</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="prompt_for_existing_users_to_log_in">Prompt for existing users to log in</string>
    <string name="log_in">Log In</string>
    <string name="clickable_link_to_navigate_to_the_login_page">Clickable link to navigate to the login page</string>
    <string name="budget_tracker">Budget Tracker</string>
    <string name="manage_your_expenses">Manage your expenses</string>
    <string name="smart_grocery_tracker">Smart Grocery Tracker</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="manual_receipt_option_icon">manual_receipt_option_icon</string>
    <string name="manual_receipt_entry">Manual Receipt Entry</string>
    <string name="smart_ocr_option_icon">smart_ocr_option_icon</string>
    <string name="smart_ocr_scanning">Smart OCR Scanning</string>
    <string name="Cancel">Cancel</string>
    <string name="dialog_icon">Dialog Icon</string>
    <string name="add_new_item">Add New Item</string>
    <string name="close_button">Close Button</string>
    <string name="item_name">Item Name</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="done">Done</string>
    <string name="Cancel1">Cancel</string>
    <string name="Dialog_icon">Dialog Icon</string>
    <string name="add_new_bill">ADD NEW BILL</string>
    <string name="Close_button">Close Button</string>
    <string name="bill_name">Bill Name</string>
    <string name="date_of_purchase">Date of Purchase</string>
    <string name="store_name">Store Name</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="total_price">Total Price</string>
    <string name="next">Next</string>
    <string name="budget_details">Budget Details</string>
    <string name="budget_amount_0">Budget Amount: $0</string>
    <string name="spent_amount_0">Spent Amount: $0</string>
    <string name="start_date_yyyy_mm_dd">Start Date: </string>
    <string name="end_date_yyyy_mm_dd">End Date: </string>
    <string name="edit_budget">Edit Budget</string>
    <string name="Close">Close</string>
    <string name="Captured_image">captured Image</string>
    <string name="Store_name">Store Name</string>
    <string name="Date_of_purchase">Date of Purchase</string>
    <string name="Price">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="faded_background_image">Faded Background Image</string>
    <string name="edit_billing_information">Edit Billing Information</string>
    <string name="Bill_name">Bill Name:</string>
    <string name="Bill_name1">Bill Name</string>
    <string name="date">Date:</string>
    <string name="Date">Date</string>
    <string name="Quantity1">Quantity:</string>
    <string name="Total_quantity">Total Quantity</string>
    <string name="amount">Amount:</string>
    <string name="Total_price">Total Price</string>
    <string name="description">Description:</string>
    <string name="Description">Description</string>
    <string name="Cancel2">Cancel</string>
    <string name="update">Update</string>
    <string name="add_item">Add Item</string>
    <string name="please_add_items">Please add items</string>
    <string name="Add_item">Add Item</string>
    <string name="Delete_item">Delete Item</string>
    <string name="submit">Submit</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="welcome_message">Hello, %1$s</string>
    <string name="left_to_spend">Left to Spend:</string>
    <string name="_45_00">$45.00</string>
    <string name="out_of">out of</string>
    <string name="_500_00">$500.00</string>
    <string name="add_expense_icon">Add Expense Icon</string>
    <string name="add_grocery_list">Add Grocery List</string>
    <string name="view_details_icon">View Details Icon</string>
    <string name="monthly_spend">Monthly Spend</string>
    <string name="User">User</string>
    <string name="Username1">Username</string>
    <string name="madhu">madhu</string>
    <string name="Your_email">Your Email</string>
    <string name="madhu_gmail_com">madhu@gmail.com</string>
    <string name="Edit_profile">Edit Profile</string>
    <string name="Logout">Logout</string>
    <string name="filter_by_category">Filter by Category:</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="User_profile">User Profile</string>
    <string name="tap_to_view_and_edit">Tap to view and edit</string>
    <string name="navigate_to_profile">Navigate to Profile</string>
    <string name="language">Language:</string>
    <string name="Logout1">Logout</string>
    <string name="Bill_name2">Bill Name</string>
    <string name="grocery_name">Grocery Name</string>
    <string name="Category">Category</string>
    <string name="Apply_filters">Apply Filters</string>
    <string name="Clear_filters">Clear Filters</string>
    <string name="loading_scannning_image">Loading, Scannning Image...</string>
    <string name="Item_name">Item Name</string>
    <string name="Category1">Category</string>
    <string name="Quantity2">Quantity</string>
    <string name="Price1">Price</string>
    <string name="Description1">Description</string>
    <string name="Item_name1">Item Name</string>
    <string name="Price2">Price</string>
    <string name="Category2">Category</string>
    <string name="Quantity3">Quantity</string>
    <string name="Item_name2">Item Name</string>
    <string name="Price3">Price</string>
    <string name="Category4">Category</string>
    <string name="Store_name1">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="total_amount">Total Amount: $</string>
    <string name="retake">Retake</string>
    <string name="Submit">Submit</string>


    <string-array name="categories">
        <item>Select Category</item>
        <item>Fresh Vegetables</item>
        <item>Frozen Potatoes</item>
        <item>Slice Bread</item>
        <item>Milk</item>
    </string-array>




</resources>





