<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/budget"

        />



    <item
        android:id="@+id/nav_expense_fragment"
        android:title="@string/expenses_fragment"
        android:icon="@drawable/g_list"
        />


    <item
        android:id="@+id/nav_home1"
        android:title="" />

    <item
        android:id="@+id/nav_global_search"
        android:title="@string/menu_gallery"
        android:icon="@drawable/g_search"
        />

    <item
        android:id="@+id/nav_map"
        android:title="@string/menu_slideshow"
        android:icon="@drawable/location"
        />



    </menu>
