<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:background="@drawable/custom_item_background">

    <!-- Container for Item Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Horizontal Layout for Store Name and Price -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="8dp">

            <!-- Store Name and Date of Purchase in Vertical Layout -->
            <CheckBox
                android:id="@+id/expenseCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <!-- Store Name TextView -->
                <TextView
                    android:id="@+id/storeNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/Store_name"
                    android:textColor="@color/vibrant_orange"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Date of Purchase TextView -->
                <TextView
                    android:id="@+id/dateOfPurchaseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_purchase"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Price and Quantity in Vertical Layout -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <!-- Price TextView -->
                <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/price"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd" />

                <!-- Quantity TextView -->
                <TextView
                    android:id="@+id/quantityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:layout_gravity="end"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:textAlignment="textEnd" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
